--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "gsap": "^3.7.1",
     "lottie-web": "^5.7.11",
     "react": "^17.0.2",
@@ -18,7 +19,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
-    "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
